--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
         "classnames": "^2.3.1",
         "formik": "^2.2.3",
         "formik-devtools-extension": "^0.1.4",
-        "node-sass": "^4.14.1",
         "prism-react-renderer": "^1.1.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-live": "^2.2.3",
         "react-scripts": "^3.4.3",
+        "sass": "^1.56.1",
         "yup": "^0.29.3"
     },
     "scripts": {
